# ish

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  REAME.md  release.yml
.github/workflows/: release-arm64.yml  release.yml
old/: shell1  shell1-arm64  shell1.c
src/: custom_readline.c  custom_readline.h  main.c  main.c.bak
